# pictochat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-release.sh  build.sh  run-release.sh  run.sh  sdl-gpu-emscripten.patch  sdl_gfx.patch  test.cpp
cmake/sdl2/: FindSDL2.cmake
res/: index.html  test.html
res/shader/: crt.frag  crt.vert
scripts/: build-release.sh  build.sh  run-release.sh  run.sh
src/: Graphics.cpp  Graphics.h  Input.cpp  Input.h  Main.cpp  Main.h  MobileTextInput.cpp  MobileTextInput.h  Network.cpp  Network.h  ResourceManager.cpp  ResourceManager.h  Util.cpp  Util.h  Version.h
src/chat/: ChatState.cpp  ChatState.h  GuiMacros.h  ImageUtil.cpp  ImageUtil.h  KeyboardGui.cpp  KeyboardGui.h  MainMenuGui.cpp  MainMenuGui.h  Message.cpp  Message.h  TopScreenGui.cpp  TopScreenGui.h
src/dos/: Console.cpp  Console.h  Shell.cpp  Shell.h  VirtualFS.cpp  VirtualFS.h
src/dos/command/: Command.cpp  Command.h  CommandCd.cpp  CommandCd.h  CommandChat.cpp  CommandChat.h  CommandComment.cpp  CommandComment.h  CommandCurl.cpp  CommandCurl.h  CommandDir.cpp  CommandDir.h  CommandType.cpp  CommandType.h
src/font/: Atlas.h  Font.h
src/fs/: File.cpp  File.h  Filesystem.cpp  Filesystem.h
src/gui/: GuiButton.cpp  GuiButton.h  GuiImage.cpp  GuiImage.h  GuiObject.cpp  GuiObject.h  GuiText.cpp  GuiText.h
src/net/: Request.cpp  Request.h  Socket.cpp  Socket.h
src/state/: BootState.cpp  BootState.h  State.h  StateManager.cpp  StateManager.h  TestState.cpp  TestState.h
src/types/: Color.h  Font.cpp  Font.h  Sound.cpp  Sound.h  Text.cpp  Text.h  Texture.cpp  Texture.h  Timer.cpp  Timer.h  Vector2.h
src/util/: Base64.cpp  Base64.h  Sources.cpp.in  Sources.h  Util.cpp  Util.h  Version.cpp.in
web/: index.html
